--- a/.docksal/docksal.env
+++ b/.docksal/docksal.env
@@ -10,12 +10,12 @@ DOCKSAL_STACK=default
 
 # Lock images versions for LAMP services
 # This will prevent images from being updated when Docksal is updated
-#WEB_IMAGE='docksal/web:x.x-apache2.4'
-DB_IMAGE='docksal/mysql:5.7-1.4'
-#CLI_IMAGE='docksal/cli:x.x-php7.1'
+#WEB_IMAGE='docksal/apache:2.4-2.5'
+#DB_IMAGE='docksal/mariadb:10.6-1.3'
+#CLI_IMAGE='docksal/cli:php8.1-3.2'
 
 # Override virtual host (matches project folder name by default)
-#VIRTUAL_HOST=drupal8.docksal
+#VIRTUAL_HOST=drupal9.docksal
 # Override document root ('docroot' by default)
 DOCROOT=web
 
